--- a/v1/CMakeLists.txt
+++ b/v1/CMakeLists.txt
@@ -2,5 +2,8 @@
 cmake_minimum_required(VERSION 3.0.0)
 
 project(APP)
-add_executable(app add.cpp div.cpp main.cpp mul.cpp sub.cpp)
+
+set(SRC_LIST add.cpp div.cpp main.cpp mul.cpp sub.cpp)
+
+add_executable(app ${SRC_LIST})
 
